# harmonic-conductor-studio

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
crates/hfield-analysis/: Cargo.toml
crates/hfield-analysis/src/: lib.rs
crates/hfield-carrier/: Cargo.toml
crates/hfield-carrier/src/: lib.rs
crates/hfield-conductor/: Cargo.toml
crates/hfield-conductor/src/: lib.rs
crates/hfield-coordinate/: Cargo.toml
crates/hfield-coordinate/src/: lib.rs
crates/hfield-coordinate/tests/: canonical_reader_coordinates.rs
crates/hfield-cymatics/: Cargo.toml
crates/hfield-cymatics/src/: lib.rs
crates/hfield-domain/: Cargo.toml
crates/hfield-domain/src/: lib.rs
crates/hfield-dsp/: Cargo.toml
crates/hfield-dsp/src/: lib.rs
crates/hfield-field/: Cargo.toml
crates/hfield-field/src/: lib.rs
crates/hfield-forge-bridge/: Cargo.toml
crates/hfield-forge-bridge/src/: lib.rs
crates/hfield-loop/: Cargo.toml
crates/hfield-loop/src/: lib.rs
crates/hfield-mapping/: Cargo.toml
crates/hfield-mapping/src/: lib.rs
crates/hfield-music/: Cargo.toml
crates/hfield-music/src/: lib.rs
crates/hfield-notation/: Cargo.toml
crates/hfield-notation/src/: lib.rs
crates/hfield-packet/: Cargo.toml
crates/hfield-packet/src/: lib.rs
crates/hfield-playhead/: Cargo.toml
crates/hfield-playhead/src/: lib.rs
crates/hfield-project/: Cargo.toml
crates/hfield-project/src/: lib.rs
crates/hfield-project/tests/: canonical_reader_asset.rs
crates/hfield-resonance/: Cargo.toml
crates/hfield-resonance/src/: lib.rs
crates/hfield-storage/: Cargo.toml
crates/hfield-storage/src/: lib.rs
crates/hfield-visual/: Cargo.toml
crates/hfield-visual/src/: lib.rs
packaging/hcs_composer_first_workflow_and_soundfont_foundation_v1/: HCS_COMPOSER_FIRST_WORKFLOW_AND_SOUNDFONT_FOUNDATION_V1_MANIFEST.json  README.md
packaging/hcs_composer_studio_canvas_rebuild_v1/: HCS_COMPOSER_STUDIO_CANVAS_REBUILD_V1_MANIFEST.json  README.md
packaging/hcs_composer_waveform_editor_true_sound_body_v1/: HCS_COMPOSER_WAVEFORM_EDITOR_TRUE_SOUND_BODY_V1_MANIFEST.json  README.md
packaging/hcs_composer_waveform_editor_true_sound_body_v1_r2_fix/: HCS_COMPOSER_WAVEFORM_EDITOR_TRUE_SOUND_BODY_V1_R2_FIX_MANIFEST.json  README.md
packaging/hcs_demo_song_full_system_exerciser_v1/: HCS_DEMO_SONG_FULL_SYSTEM_EXERCISER_V1_MANIFEST.json  README.md
packaging/hcs_desktop_launcher_studio_startup_fix_v1/: HCS_DESKTOP_LAUNCHER_STUDIO_STARTUP_FIX_V1_MANIFEST.json  README.md
packaging/hcs_fluidsynth_soundfont_playback_engine_v1/: HCS_FLUIDSYNTH_SOUNDFONT_PLAYBACK_ENGINE_V1_MANIFEST.json  README.md
packaging/hcs_glass_reader_air_waveform_piezo_ticker_v1/: HCS_GLASS_READER_AIR_WAVEFORM_PIEZO_TICKER_V1_MANIFEST.json  README.md
packaging/hcs_glass_reader_camera_controls_exact_output_clock_v1/: HCS_GLASS_READER_CAMERA_CONTROLS_EXACT_OUTPUT_CLOCK_V1_MANIFEST.json  PATCH_NOTES.md  README.md
packaging/hcs_glass_reader_cumulative_reveal_history_v1/: PATCH_NOTES.md
packaging/hcs_glass_reader_long_air_waveform_ticker_readout_v1/: HCS_GLASS_READER_LONG_AIR_WAVEFORM_TICKER_READOUT_V1_MANIFEST.json  README.md
packaging/hcs_glass_reader_native_waveform_body_integration_v1/: HCS_GLASS_READER_NATIVE_WAVEFORM_BODY_INTEGRATION_V1_MANIFEST.json  README.md
packaging/hcs_glass_reader_production_scene_composer_v1/: HCS_GLASS_READER_PRODUCTION_SCENE_COMPOSER_V1_MANIFEST.json  README.md
packaging/hcs_glass_reader_ticker_reveal_and_translucent_skin_v1/: HCS_GLASS_READER_TICKER_REVEAL_AND_TRANSLUCENT_SKIN_V1_MANIFEST.json  README.md
packaging/hcs_instrument_rack_and_track_sound_v1/: HCS_INSTRUMENT_RACK_AND_TRACK_SOUND_V1_MANIFEST.json  README.md
packaging/hcs_key_frequency_registry_v1/: README.md
packaging/hcs_one_click_launcher_v1/: HCS_ONE_CLICK_DESKTOP_LAUNCHER_V1_MANIFEST.json  README.md
packaging/hcs_production_notation_render_sync_v1/: HCS_PRODUCTION_NOTATION_RENDER_SYNC_V1_MANIFEST.json  README.md
packaging/hcs_production_packaging_v1/: NOTICE.txt  NOTICES.md  RELEASE_CHECKLIST.md  RELEASE_VERIFICATION_POLICY.md
packaging/hcs_score_spine_conductor_glass_reader_sync_v1/: HCS_SCORE_SPINE_CONDUCTOR_GLASS_READER_SYNC_V1_MANIFEST.json  README.md
packaging/hcs_studio_creation_backend_and_placeholder_purge_v1/: HCS_STUDIO_CREATION_BACKEND_AND_PLACEHOLDER_PURGE_V1_MANIFEST.json  README.md
packaging/hcs_track_editor_and_piano_roll_v1/: README.md
packaging/hcs_virtual_keyboard_and_realtime_note_entry_v1/: README.md
packaging/hcs_waveform_to_3d_field_body_v1/: HCS_WAVEFORM_TO_3D_FIELD_BODY_V1_MANIFEST.json  README.md
projects/: hcs_canonical_reader_packet_v1.hfield
scripts/desktop/: hcs_install_one_click_launcher_v1.sh  hcs_launch_harmonic_conductor_studio.sh  hcs_verify_one_click_launcher_v1.sh
scripts/release/: hcs_production_packaging_v1_build.sh  hcs_production_packaging_v1_verify.sh
src/: App.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/bridge/: tauriCommands.ts
src/components/: HfieldPhaseFieldViewport.tsx  HfieldVolumetricPacketField.tsx
