[workspace]
resolver = "2"
members = [
  "crates/hfield-domain",
  "crates/hfield-conductor",
  "crates/hfield-dsp",
  "crates/hfield-analysis",
  "crates/hfield-storage",
  "src-tauri"
]

[workspace.package]
edition = "2021"
authors = ["AI.Web Inc."]
license = "PROPRIETARY"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
