[package]
name = "hfield-carrier"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
hfield-domain = { path = "../hfield-domain" }
hfield-music = { path = "../hfield-music" }
