[package]
name = "hfield-coordinate"
version = "0.1.0"
edition = "2021"
description = "AI.Web HFIELD harmonic coordinate registry for lawful packet field rendering"

[dependencies]
hfield-domain = { path = "../hfield-domain" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
