[package]
name = "hfield-forge-bridge"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
hfield-domain = { path = "../hfield-domain" }
hfield-packet = { path = "../hfield-packet" }
hfield-storage = { path = "../hfield-storage" }
