[package]
name = "hfield-mapping"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
hfield-domain = { path = "../hfield-domain" }
hfield-conductor = { path = "../hfield-conductor" }
hfield-music = { path = "../hfield-music" }
