[package]
name = "hfield-project"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
hfield-domain = { path = "../hfield-domain" }
hfield-storage = { path = "../hfield-storage" }
hfield-packet = { path = "../hfield-packet" }
